--- a/chat/config.yaml
+++ b/chat/config.yaml
@@ -15,7 +15,7 @@ do_train: true
 evaluation_strategy: epoch # One of ["no", "steps", "epoch"]
 gradient_accumulation_steps: 8
 gradient_checkpointing: true
-hub_model_id: lewtun/starchat-alpha
+hub_model_id: 84d93r/ducky-ai
 hub_private_repo: true
 hub_strategy: every_save
 learning_rate: 2.0e-05
@@ -25,14 +25,14 @@ logging_strategy: steps
 lr_scheduler_type: cosine
 max_steps: -1
 num_train_epochs: 3
-output_dir: data/starchat-alpha
+output_dir: data/ducky-alpha
 overwrite_output_dir: true
 per_device_eval_batch_size: 4
 per_device_train_batch_size: 4
 push_to_hub: true
 remove_unused_columns: true
 report_to:
-- tensorboard
+- wandb
 save_steps: 500
 save_strategy: steps
 save_total_limit: null
